# de-projects

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: actionlint.yml  black.yml  deploy_dags.yml  deploy_image.yml  pyright.yml  pytest.yml  ruff.yml  sqlfluff.yml
airflow-composer/dags/: pager_test.py
